// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxSVGMap component Rendering displays map with custom props 1`] = `
<svg
  aria-label="label"
  className="className"
  role="group"
  viewBox="viewBox"
  xmlns="http://www.w3.org/2000/svg"
>
  <text>
    childrenBefore
  </text>
  <path
    aria-checked={false}
    aria-label="name0"
    className="locationClassName"
    d="path0"
    id="id0"
    name="name0"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseMove={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="checkbox"
    tabIndex="0"
  />
  <path
    aria-checked={false}
    aria-label="name1"
    className="locationClassName"
    d="path1"
    id="id1"
    name="name1"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseMove={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="checkbox"
    tabIndex="0"
  />
  <path
    aria-checked={false}
    aria-label="name2"
    className="locationClassName"
    d="path2"
    id="id2"
    name="name2"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseMove={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="checkbox"
    tabIndex="0"
  />
  <text>
    childrenAfter
  </text>
</svg>
`;

exports[`CheckboxSVGMap component Rendering displays map with default props 1`] = `
<svg
  aria-label="label"
  className="svg-map"
  role="group"
  viewBox="viewBox"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    aria-checked={false}
    aria-label="name0"
    className="svg-map__location"
    d="path0"
    id="id0"
    name="name0"
    onBlur={undefined}
    onClick={[Function]}
    onFocus={undefined}
    onKeyDown={[Function]}
    onMouseMove={undefined}
    onMouseOut={undefined}
    onMouseOver={undefined}
    role="checkbox"
    tabIndex="0"
  />
  <path
    aria-checked={false}
    aria-label="name1"
    className="svg-map__location"
    d="path1"
    id="id1"
    name="name1"
    onBlur={undefined}
    onClick={[Function]}
    onFocus={undefined}
    onKeyDown={[Function]}
    onMouseMove={undefined}
    onMouseOut={undefined}
    onMouseOver={undefined}
    role="checkbox"
    tabIndex="0"
  />
  <path
    aria-checked={false}
    aria-label="name2"
    className="svg-map__location"
    d="path2"
    id="id2"
    name="name2"
    onBlur={undefined}
    onClick={[Function]}
    onFocus={undefined}
    onKeyDown={[Function]}
    onMouseMove={undefined}
    onMouseOut={undefined}
    onMouseOver={undefined}
    role="checkbox"
    tabIndex="0"
  />
</svg>
`;
